provision/k8s/manifests/overlays/core/traefik/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ui-http
spec:
  entryPoints:
    - http
  routes:
    - match: Host(`traefik-ui.k8s.local`) || PathPrefix(`/dashboard`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ui-https
spec:
  entryPoints:
    - https
  routes:
    - match: Host(`traefik-ui.k8s.local`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: traefik-tls-cert
